--- a/package.json
+++ b/package.json
@@ -52,6 +52,12 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
+  "dependencies": {
+    "react-native-device-info": "10.3.0",
+    "react-native-siren": "0.0.5",
+    "semver": "7.2.1",
+    "underscore": "1.12.1"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.5.0",
@@ -73,11 +79,7 @@
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
-    "typescript": "^5.0.2",
-    "react-native-device-info": "10.3.0",
-    "react-native-siren": "0.0.5",
-    "semver": "7.2.1",
-    "underscore": "1.12.1"
+    "typescript": "^5.0.2"
   },
   "resolutions": {
     "@types/react": "17.0.21"
