--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,10 @@ apply plugin: "com.android.library"
 
 def DEFAULT_CORE_APP_UPDATE_VERSION = "2.0.1"
 
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
+
 if (isNewArchitectureEnabled()) {
   apply plugin: "com.facebook.react"
 }
@@ -84,7 +88,8 @@ dependencies {
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
+  implementation 'com.google.android.play:core:1.7.3'
   implementation 'com.google.android.play:review:2.0.1'
-  implementation("com.google.android.play:app-update:${safeExtGet('playCoreAppUpdateVersion', DEFAULT_CORE_APP_UPDATE_VERSION)}")
+  // implementation("com.google.android.play:app-update:${safeExtGet('playCoreAppUpdateVersion', DEFAULT_CORE_APP_UPDATE_VERSION)}")
 }
 
