--- a/android/build.gradle
+++ b/android/build.gradle
@@ -88,6 +88,7 @@ dependencies {
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
+  implementation 'com.google.android.material:material:1.0.0'
   implementation 'com.google.android.play:core:1.7.3'
   implementation 'com.google.android.play:review:2.0.1'
   // implementation("com.google.android.play:app-update:${safeExtGet('playCoreAppUpdateVersion', DEFAULT_CORE_APP_UPDATE_VERSION)}")
