--- a/android/build.gradle
+++ b/android/build.gradle
@@ -89,8 +89,9 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation 'com.google.android.material:material:1.0.0'
-  implementation 'com.google.android.play:core:1.7.3'
+  // implementation 'com.google.android.play:core:1.7.3'
   implementation 'com.google.android.play:review:2.0.1'
+  implementation("com.google.android.play:app-update:2.1.0")
   // implementation("com.google.android.play:app-update:${safeExtGet('playCoreAppUpdateVersion', DEFAULT_CORE_APP_UPDATE_VERSION)}")
 }
 
